--- a/admin/storage-volumes.html
+++ b/admin/storage-volumes.html
@@ -223,7 +223,7 @@
           </div>
           <div class="modal-body">
             <div class="row">
-              <label class="col-4 col-form-label" id="storageVolumeNameEditInput"></label>
+              <label class="col-12 col-form-label" id="storageVolumeNameEditInput"></label>
               <div class="col-12">
                 <div class="form-group text-right">
                   <pre>
@@ -368,7 +368,7 @@
     });
   }
 
-  //Called by Edit action, loads JSON data of project
+  //Called by Edit action, loads JSON data of storage volume
   function loadStorageVolumeJson(storageVolumeToLoad){
     console.log("Info: loading storage volume " + storageVolumeToLoad);
     storageVolumeToUpdate = storageVolumeToLoad;
