--- a/admin/instances.html
+++ b/admin/instances.html
@@ -349,11 +349,13 @@
       columns: [
         {},
         { title: "Name" },
-        { title: "Image" },
+        { title: "OS" },
         { title: "Location" },
+        { title: "IPv4" },
+        { title: "IPv6" },
         { title: "Type" },
-        { title: "Memory Usage" },
-        { title: "Root Disk Usage" },
+        { title: "Memory" },
+        { title: "Root Disk" },
         { title: "Status" },
         { title: "Action" }
       ],
